src/lib/drawing/snapshots/osm__drawing__line_tesselator__tests__tesselate_90deg_angle_line.snap
---
source: src/lib/drawing/line_tesselator.rs
expression: builder.buffers
---
VertexBuffers {
    vertices: [
        Vertex {
            position: [
                0,
                0,
            ],
            normal: [
                0,
                4096,
            ],
            feature_id: 65536,
            object_id: 0,
        },
        Vertex {
            position: [
                0,
                0,
            ],
            normal: [
                0,
                -4096,
            ],
            feature_id: 65536,
            object_id: 0,
        },
        Vertex {
            position: [
                1,
                0,
            ],
            normal: [
                -4095,
                4095,
            ],
            feature_id: 65536,
            object_id: 0,
        },
        Vertex {
            position: [
                1,
                0,
            ],
            normal: [
                4095,
                -4095,
            ],
            feature_id: 65536,
            object_id: 0,
        },
        Vertex {
            position: [
                1,
                1,
            ],
            normal: [
                -4096,
                0,
            ],
            feature_id: 65536,
            object_id: 0,
        },
        Vertex {
            position: [
                1,
                1,
            ],
            normal: [
                4096,
                0,
            ],
            feature_id: 65536,
            object_id: 0,
        },
    ],
    indices: [
        0,
        1,
        2,
        1,
        3,
        2,
        2,
        3,
        4,
        3,
        5,
        4,
    ],
}
